--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,5 +33,9 @@
     {% endcapture %}
     {{ include_to_scssify | scssify }}
   </style>
+  
+  <script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 
 </head>
